--- a/Customer_app/Templates/Customer/Contact.html
+++ b/Customer_app/Templates/Customer/Contact.html
@@ -1,6 +1,4 @@
-{% extends "Booking\Register.html" %}
-
-
+{% extends "Booking_app\Register.html" %}
 {% block content %}
 <!-- //w3l-header -->
 <section class="w3l-breadcrumb">
