--- a/Customer_app/Templates/Customer/index.html
+++ b/Customer_app/Templates/Customer/index.html
@@ -1,7 +1,5 @@
 
-{% extends "Booking\User.html" %}
-
-
+{% extends "Booking_app\User.html" %}
 {% block content %}
 <!-- //w3l-header -->
  <!-- main-slider -->
