--- a/Booking_app/Templates/Booking/logout.html
+++ b/Booking_app/Templates/Booking/logout.html
@@ -1,14 +1,11 @@
 
-{% extends "Booking\User.html" %}
-
+{% extends "Booking_app\User.html" %}
 {% block content %}
-
-
 <div style ="margin: 50px">
     <div class = "container">
         <h1>Make Sure You Logout properly</h1>
         <p> You have been logged out. Click the link below to login </p>  
-        <a href="{% url 'Booking:loginview' %}"><button type="submit" class="btn btn-primary submit">Login</button></a>
+        <a href="{% url 'Booking_app:loginview' %}"><button type="submit" class="btn btn-primary submit">Login</button></a>
     </div>
     
 </div>
